@@ -1,7 +1,6 @@
 <IfDefine FASTCGI>
-	<IfModule !mod_fastcgi.c>
-		LoadModule fastcgi_module modules/mod_fastcgi.so
-	</IfModule>
-
-	AddHandler fastcgi-script fcg fcgi fpl
+LoadModule fastcgi_module modules/mod_fastcgi.so
+AddHandler fastcgi-script fcg fcgi fpl
 </IfDefine>
+
+# vim: ts=4 filetype=apache
