@@ -2,7 +2,4 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 	<herd>apache</herd>
-	<maintainer>
-		<email>apache-bugs@gentoo.org</email>
-	</maintainer>
 </pkgmetadata>
