@@ -1,18 +1,16 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_fastcgi/Attic/mod_fastcgi-2.4.4_pre20070916.ebuild,v 1.2 2008/01/27 17:31:32 hollow Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_fastcgi/Attic/mod_fastcgi-2.4.6.ebuild,v 1.1 2008/01/27 17:31:32 hollow Exp $
 
 inherit apache-module
 
 DESCRIPTION="FastCGI is a open extension to CGI without the limitations of server specific APIs."
 HOMEPAGE="http://fastcgi.com/"
-SRC_URI="mirror://gentoo/${P}.tar.gz"
+SRC_URI="http://www.fastcgi.com/dist/${P}.tar.gz"
 
 KEYWORDS="~amd64 ~x86"
 SLOT="0"
 LICENSE="FastCGI"
-
-S="${WORKDIR}"/${PN}
 
 APXS2_ARGS="-c mod_fastcgi.c fcgi*.c"
 APACHE2_MOD_CONF="20_${PN}"
